--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,10 @@
         android:layout_height="wrap_content"
         android:textSize="35sp"
         android:text="@string/app_name"
-        android:textAlignment="center"
-        android:layout_margin="90dp"
+        android:layout_marginVertical="90dp"
         android:textAllCaps="true"
         android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp" />
+        android:layout_centerHorizontal="true"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/pickFileButton"
