--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,23 @@
         android:layout_centerInParent="true"
         android:text="@string/pick_file" />
 
+    <TextView
+        android:id="@+id/fileNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_below="@id/pickFileButton"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/not_selected"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/changeDirectoryButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/extract_to"
-        android:layout_below="@id/pickFileButton"
+        android:layout_below="@id/fileNameTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"/>
 
