--- a/app/src/main/res/layout/fragment_extract.xml
+++ b/app/src/main/res/layout/fragment_extract.xml
@@ -130,7 +130,8 @@
                 android:id="@+id/progressBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                app:indicatorColor="#00B8D4"/>
 
             <TextView
                 android:id="@+id/progressTextView"
