--- a/app/src/main/res/drawable/ic_github.xml
+++ b/app/src/main/res/drawable/ic_github.xml
@@ -1,3 +1,20 @@
+<!--
+  ~  Copyright (C) 2023  WirelessAlien <https://github.com/WirelessAlien>
+  ~
+  ~     This program is free software: you can redistribute it and/or modify
+  ~     it under the terms of the GNU General Public License as published by
+  ~     the Free Software Foundation, either version 3 of the License, or
+  ~     any later version.
+  ~
+  ~     This program is distributed in the hope that it will be useful,
+  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~     GNU General Public License for more details.
+  ~
+  ~     You should have received a copy of the GNU General Public License
+  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+  -->
+
 <vector android:height="24dp" android:viewportHeight="56.693"
     android:viewportWidth="56.693" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#FF000000" android:fillType="evenOdd" android:pathData="M28.34,5.219c-13.601,0 -24.63,11.027 -24.63,24.63c0,10.882 7.057,20.114 16.844,23.371c1.231,0.228 1.683,-0.535 1.683,-1.185c0,-0.587 -0.023,-2.528 -0.033,-4.586c-6.852,1.49 -8.298,-2.906 -8.298,-2.906c-1.12,-2.847 -2.735,-3.604 -2.735,-3.604c-2.235,-1.529 0.169,-1.497 0.169,-1.497c2.473,0.174 3.776,2.539 3.776,2.539c2.197,3.765 5.762,2.677 7.168,2.047c0.221,-1.592 0.859,-2.679 1.564,-3.294c-5.471,-0.623 -11.222,-2.735 -11.222,-12.172c0,-2.689 0.962,-4.886 2.538,-6.611c-0.256,-0.621 -1.099,-3.125 0.239,-6.518c0,0 2.068,-0.662 6.775,2.525c1.965,-0.546 4.072,-0.82 6.165,-0.829c2.093,0.009 4.202,0.283 6.17,0.829c4.701,-3.187 6.766,-2.525 6.766,-2.525c1.341,3.393 0.497,5.898 0.242,6.518c1.579,1.725 2.535,3.922 2.535,6.611c0,9.46 -5.762,11.543 -11.247,12.153c0.883,0.764 1.67,2.263 1.67,4.561c0,3.296 -0.028,5.948 -0.028,6.759c0,0.656 0.443,1.424 1.691,1.182c9.781,-3.26 16.83,-12.49 16.83,-23.368C52.97,16.246 41.943,5.219 28.34,5.219z"/>
