--- a/app/src/main/res/layout/fragment_create_zip.xml
+++ b/app/src/main/res/layout/fragment_create_zip.xml
@@ -53,42 +53,50 @@
                 tools:ignore="RelativeOverlap" />
         </RelativeLayout>
 
-        <LinearLayout
+        <HorizontalScrollView
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@+id/relativeLayout1"
             android:layout_marginTop="10dp"
-            android:gravity="center_horizontal">
+            android:scrollbars="none"
+            android:layout_below="@+id/relativeLayout1">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/pickFileButton"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                app:icon="@drawable/ic_copy_file"
-                android:text="@string/file"
-                app:cornerRadius="10dp"/>
+                android:layout_gravity="center_horizontal">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/pickFilesButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                app:icon="@drawable/ic_files_copy"
-                android:text="@string/files"
-                app:cornerRadius="10dp"/>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/pickFileButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:text="@string/file"
+                    app:cornerRadius="10dp"
+                    app:icon="@drawable/ic_copy_file" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/pickFolderButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                app:icon="@drawable/ic_folder_copy"
-                android:text="@string/folder"
-                app:cornerRadius="10dp"/>
-        </LinearLayout>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/pickFilesButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:text="@string/files"
+                    app:cornerRadius="10dp"
+                    app:icon="@drawable/ic_files_copy" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/pickFolderButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:layout_weight="1"
+                    android:text="@string/folder"
+                    app:cornerRadius="10dp"
+                    app:icon="@drawable/ic_folder_copy" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
         <TextView
             android:id="@+id/fileNameTextView"
