--- a/app/src/main/res/layout/fragment_create_zip.xml
+++ b/app/src/main/res/layout/fragment_create_zip.xml
@@ -73,6 +73,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
                     android:layout_weight="1"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
                     android:text="@string/file"
                     app:cornerRadius="10dp"
                     app:icon="@drawable/ic_copy_file" />
@@ -84,6 +85,7 @@
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:text="@string/files"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
                     app:cornerRadius="10dp"
                     app:icon="@drawable/ic_files_copy" />
 
@@ -94,6 +96,7 @@
                     android:layout_margin="2dp"
                     android:layout_weight="1"
                     android:text="@string/folder"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
                     app:cornerRadius="10dp"
                     app:icon="@drawable/ic_folder_copy" />
             </LinearLayout>
@@ -135,6 +138,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/save_zip_to"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                app:icon="@drawable/ic_round_subdirectory"
                 android:layout_centerHorizontal="true"
                 app:cornerRadius="10dp"/>
 
@@ -142,7 +147,7 @@
                 android:id="@+id/clear_cache_btnDP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?attr/materialIconButtonStyle"
+                style="@style/Widget.Material3.Button.IconButton"
                 android:layout_toEndOf="@id/changeDirectoryButton"
                 app:icon="@drawable/ic_cache_delete" />
         </RelativeLayout>
@@ -176,13 +181,15 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="@string/create_zip"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                app:icon="@drawable/ic_round_archive"
                 app:cornerRadius="10dp"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/zipSettingsBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?attr/materialIconButtonStyle"
+                style="@style/Widget.Material3.Button.IconButton.Outlined"
                 app:icon="@drawable/ic_settings"
                 android:layout_toEndOf="@+id/createZipMBtn"
                 tools:ignore="RelativeOverlap" />
@@ -192,7 +199,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/zipSettingsBtn"
-                style="?attr/materialIconButtonStyle"
+                style="@style/Widget.Material3.Button.IconButton"
                 app:icon="@drawable/ic_help"
                 tools:ignore="RelativeOverlap" />
         </RelativeLayout>
