--- a/app/src/main/res/layout/fragment_extract.xml
+++ b/app/src/main/res/layout/fragment_extract.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_info"
-            style="?attr/materialIconButtonStyle"
+            style="@style/Widget.Material3.Button.IconButton"
             android:layout_alignParentEnd="true"
             tools:ignore="RelativeOverlap" />
 
@@ -49,27 +49,65 @@
             android:layout_centerHorizontal="true"/>
 
         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/relativeLayout"
+            android:layout_below="@id/appName">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/select"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                 />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/clear_cache_btnPF"
+                style="@style/Widget.Material3.Button.IconButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                app:icon="@drawable/ic_cache_delete" />
+        </RelativeLayout>
+        <LinearLayout
             android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
+            android:gravity="center_horizontal"
+            android:layout_margin="10dp"
             android:layout_centerInParent="true"
             android:layout_height="wrap_content">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/pickFileButton"
                 android:layout_width="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_height="wrap_content"
-                android:text="@string/pick_file"
-                app:cornerRadius="10dp"/>
+                android:layout_margin="5dp"
+                android:text="@string/file"
+                app:cornerRadius="10dp"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                android:layout_weight="1"
+                app:icon="@drawable/ic_copy_file" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/clear_cache_btnPF"
+                android:id="@+id/pickMFilesButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?attr/materialIconButtonStyle"
-                android:layout_toEndOf="@id/pickFileButton"
-                app:icon="@drawable/ic_cache_delete" />
-        </RelativeLayout>
+                android:layout_margin="5dp"
+                style="@style/Widget.Material3.Button.OutlinedButton"
+                app:icon="@drawable/ic_files_copy"
+                android:text="@string/files"
+                android:layout_weight="1"
+                app:cornerRadius="10dp" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/fileNameTextView"
@@ -97,14 +135,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/extract_to"
+                style="@style/Widget.Material3.Button.OutlinedButton"
                 android:layout_centerHorizontal="true"
+                app:icon="@drawable/ic_round_subdirectory"
                 app:cornerRadius="10dp"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/clear_cache_btnDP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="?attr/materialIconButtonStyle"
+                style="@style/Widget.Material3.Button.IconButton"
                 android:layout_toEndOf="@id/changeDirectoryButton"
                 app:icon="@drawable/ic_cache_delete" />
         </RelativeLayout>
@@ -129,11 +169,13 @@
             android:id="@+id/extractButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/extract"
             android:layout_below="@id/directoryScrollView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
-            app:cornerRadius="10dp"/>
+            android:layout_margin="5dp"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:text="@string/extract"
+            app:cornerRadius="10dp"
+            app:icon="@drawable/ic_round_unarchive" />
 
         <RelativeLayout
             android:id="@+id/progressLayout"
@@ -160,6 +202,12 @@
                 android:textSize="18sp" />
         </RelativeLayout>
 
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/circularProgressBar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:indeterminate="true" />
     </RelativeLayout>
 
 </FrameLayout>
