added option to choose Aes strength #25

--- a/app/src/main/res/layout/zip_settings_dialog.xml
+++ b/app/src/main/res/layout/zip_settings_dialog.xml
@@ -15,11 +15,16 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="5dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="5dp">
 
     <TextView
         android:id="@+id/dialog_title"
@@ -44,7 +49,7 @@
     <Spinner
         android:id="@+id/compression_method_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:padding="5dp"/>
     </com.google.android.material.card.MaterialCardView>
     <TextView
@@ -60,7 +65,7 @@
     <Spinner
         android:id="@+id/compression_level_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:padding="5dp"/>
     </com.google.android.material.card.MaterialCardView>
     <TextView
@@ -76,8 +81,26 @@
         <Spinner
             android:id="@+id/encryption_method_input"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
+            android:padding="5dp"/>
+    </com.google.android.material.card.MaterialCardView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:layout_marginStart="10dp"
+        android:text="Encryption Strength"/>
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+        <Spinner
+            android:id="@+id/encryption_strength_input"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
             android:padding="5dp"/>
     </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
+</ScrollView>
